# The-Answer-Protocol

./: .gitignore  CLAUDE.md  Makefile  README.md  a.cpp  a.out  changelog  default.json  defaultpruebas.json  json_test  main.cpp  tap  tap.cpp  uygubh.md
deprecated/: EnemyRoom.hpp  MerchantRoom.hpp  SafeRoom.hpp
inc/battle/: Battle.hpp
inc/characters/: Character.hpp  Enchanter.hpp  Enemy.hpp  EnemyFactory.hpp  Fighter.hpp  Goblin.hpp  Merchant.hpp  NPC.hpp  Narrator.hpp  Player.hpp  QuestGiver.hpp  Vendor.hpp
inc/enchantments/: Enchantment.hpp  EnchantmentFactory.hpp  Flame.hpp
inc/items/: Armor.hpp  Chest.hpp  ChestKey.hpp  Consumable.hpp  Gear.hpp  Inventory.hpp  IronArmor.hpp  IronShield.hpp  IronSword.hpp  Item.hpp  ItemFactory.hpp  Shield.hpp  Weapon.hpp
inc/libs/: README.md
inc/parser/: itemparser.hpp  jsonconfig.hpp  npcparser.hpp  parser.hpp  roomparser.hpp
inc/quests/: Quest.hpp
inc/server/: PlayerConnection.hpp  Server.hpp  ServerOwner.hpp
inc/utils/: attributes.hpp  types.hpp  utils.hpp
inc/world/: ChestRoom.hpp  EnemyRoom.hpp  MerchantRoom.hpp  Room.hpp  World.hpp
prueba GUI/: CMakeLists.txt  Makefile
prueba GUI/inc/: GameClient.hpp
prueba GUI/src/: GameClient.cpp  main.cpp
src/battle/: Battle.cpp
src/characters/: Character.cpp  Enchanter.cpp  Enemy.cpp  EnemyFactory.cpp  Fighter.cpp  Goblin.cpp  Merchant.cpp  NPC.cpp  Narrator.cpp  Player.cpp  QuestGiver.cpp
src/enchantments/: Enchantment.cpp  EnchantmentFactory.cpp  Flame.cpp
src/items/: Armor.cpp  Chest.cpp  ChestKey.cpp  Consumable.cpp  Gear.cpp  Inventory.cpp  IronArmor.cpp  IronShield.cpp  IronSword.cpp  Item.cpp  ItemFactory.cpp  Shield.cpp  Weapon.cpp
src/parser/: itemparser.cpp  jsonconfig.cpp  npcparser.cpp  parser.cpp  roomparser.cpp
src/quests/: Quest.cpp
src/server/: PlayerConnection.cpp  Server.cpp  ServerOwner.cpp
src/utils/: colors.cpp  globals.cpp  log.cpp  string_utils.cpp  types.cpp
src/world/: Room.cpp  World.cpp
